
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint32_t ;
struct amdgpu_device {int dummy; } ;


 int GC ;
 int GRBM_CAM_DATA__CAM_ADDR__SHIFT ;
 int GRBM_CAM_DATA__CAM_REMAPADDR__SHIFT ;
 int SOC15_REG_OFFSET (int ,int ,int ) ;
 int WREG32_SOC15 (int ,int ,int ,int) ;
 int mmGRBM_CAM_DATA ;
 int mmGRBM_CAM_DATA_UPPER ;
 int mmGRBM_CAM_INDEX ;
 int mmSPI_CONFIG_CNTL ;
 int mmSPI_CONFIG_CNTL_REMAP ;
 int mmVGT_ESGS_RING_SIZE ;
 int mmVGT_ESGS_RING_SIZE_UMD ;
 int mmVGT_GSVS_RING_SIZE ;
 int mmVGT_GSVS_RING_SIZE_UMD ;
 int mmVGT_HS_OFFCHIP_PARAM ;
 int mmVGT_HS_OFFCHIP_PARAM_UMD ;
 int mmVGT_TF_MEMORY_BASE ;
 int mmVGT_TF_MEMORY_BASE_HI ;
 int mmVGT_TF_MEMORY_BASE_HI_UMD ;
 int mmVGT_TF_MEMORY_BASE_UMD ;
 int mmVGT_TF_RING_SIZE ;
 int mmVGT_TF_RING_SIZE_UMD ;

__attribute__((used)) static void gfx_v10_0_setup_grbm_cam_remapping(struct amdgpu_device *adev)
{
 uint32_t data;



 WREG32_SOC15(GC, 0, mmGRBM_CAM_INDEX, 0);


 data = (SOC15_REG_OFFSET(GC, 0, mmVGT_TF_RING_SIZE_UMD) <<
  GRBM_CAM_DATA__CAM_ADDR__SHIFT) |
        (SOC15_REG_OFFSET(GC, 0, mmVGT_TF_RING_SIZE) <<
  GRBM_CAM_DATA__CAM_REMAPADDR__SHIFT);
 WREG32_SOC15(GC, 0, mmGRBM_CAM_DATA_UPPER, 0);
 WREG32_SOC15(GC, 0, mmGRBM_CAM_DATA, data);


 data = (SOC15_REG_OFFSET(GC, 0, mmVGT_TF_MEMORY_BASE_UMD) <<
  GRBM_CAM_DATA__CAM_ADDR__SHIFT) |
        (SOC15_REG_OFFSET(GC, 0, mmVGT_TF_MEMORY_BASE) <<
  GRBM_CAM_DATA__CAM_REMAPADDR__SHIFT);
 WREG32_SOC15(GC, 0, mmGRBM_CAM_DATA_UPPER, 0);
 WREG32_SOC15(GC, 0, mmGRBM_CAM_DATA, data);


 data = (SOC15_REG_OFFSET(GC, 0, mmVGT_TF_MEMORY_BASE_HI_UMD) <<
  GRBM_CAM_DATA__CAM_ADDR__SHIFT) |
        (SOC15_REG_OFFSET(GC, 0, mmVGT_TF_MEMORY_BASE_HI) <<
  GRBM_CAM_DATA__CAM_REMAPADDR__SHIFT);
 WREG32_SOC15(GC, 0, mmGRBM_CAM_DATA_UPPER, 0);
 WREG32_SOC15(GC, 0, mmGRBM_CAM_DATA, data);


 data = (SOC15_REG_OFFSET(GC, 0, mmVGT_HS_OFFCHIP_PARAM_UMD) <<
  GRBM_CAM_DATA__CAM_ADDR__SHIFT) |
        (SOC15_REG_OFFSET(GC, 0, mmVGT_HS_OFFCHIP_PARAM) <<
  GRBM_CAM_DATA__CAM_REMAPADDR__SHIFT);
 WREG32_SOC15(GC, 0, mmGRBM_CAM_DATA_UPPER, 0);
 WREG32_SOC15(GC, 0, mmGRBM_CAM_DATA, data);


 data = (SOC15_REG_OFFSET(GC, 0, mmVGT_ESGS_RING_SIZE_UMD) <<
  GRBM_CAM_DATA__CAM_ADDR__SHIFT) |
        (SOC15_REG_OFFSET(GC, 0, mmVGT_ESGS_RING_SIZE) <<
  GRBM_CAM_DATA__CAM_REMAPADDR__SHIFT);
 WREG32_SOC15(GC, 0, mmGRBM_CAM_DATA_UPPER, 0);
 WREG32_SOC15(GC, 0, mmGRBM_CAM_DATA, data);


 data = (SOC15_REG_OFFSET(GC, 0, mmVGT_GSVS_RING_SIZE_UMD) <<
  GRBM_CAM_DATA__CAM_ADDR__SHIFT) |
        (SOC15_REG_OFFSET(GC, 0, mmVGT_GSVS_RING_SIZE) <<
  GRBM_CAM_DATA__CAM_REMAPADDR__SHIFT);
 WREG32_SOC15(GC, 0, mmGRBM_CAM_DATA_UPPER, 0);
 WREG32_SOC15(GC, 0, mmGRBM_CAM_DATA, data);


 data = (SOC15_REG_OFFSET(GC, 0, mmSPI_CONFIG_CNTL_REMAP) <<
  GRBM_CAM_DATA__CAM_ADDR__SHIFT) |
        (SOC15_REG_OFFSET(GC, 0, mmSPI_CONFIG_CNTL) <<
  GRBM_CAM_DATA__CAM_REMAPADDR__SHIFT);
 WREG32_SOC15(GC, 0, mmGRBM_CAM_DATA_UPPER, 0);
 WREG32_SOC15(GC, 0, mmGRBM_CAM_DATA, data);
}
